--- a/snapmirror/sidebar.yml
+++ b/snapmirror/sidebar.yml
@@ -55,8 +55,7 @@ entries:
   - title: Recovering from a disaster at the 7-Mode site during transition
     url: "/snapmirror/task_recovering_from_a_disaster_at_7_mode_site_during_transition.html"
     entries:
-    - title: Redirecting clients to the clustered Data ONTAP secondary volume after
-        a disaster
+    - title: Redirecting clients to the clustered Data ONTAP secondary volume after a disaster
       url: "/snapmirror/task_redirecting_clients_to_clustered_ontap_secondary_volume.html"
     - title: Transitioning the 7-Mode primary as a stand-alone volume
       url: "/snapmirror/task_transitioning_7_mode_primary_as_a_standalone_volume.html"
