--- a/.travis.yml
+++ b/.travis.yml
@@ -1,43 +1,45 @@
 dist: xenial
-if: branch = main OR repo =~ /-internal/
 language: ruby
 rvm:
 - 2.4.3
 env:
   global:
     - FRAMEWORK_BRANCH=main
-before_install:
-- echo -e "machine github.com\n login $GH_TOKEN" >> ~/.netrc && chmod 600 ~/.netrc
-- git submodule add -b $FRAMEWORK_BRANCH https://github.com/NetAppDocs/jekyll dependencies/jekyll
-- gem update --system && gem install bundler && gem update bundler
-- if [[ -z "$DEPLOY_BRANCH" ]]; then export DEPLOY_BRANCH=gh-pages; fi
-- cp -rl dependencies/jekyll/search.html ./command-map/search.html
-- sed -i 's/permalink\:\s*\/search\.html/permalink\:\ command-map\/search\.html/g' ./command-map/search.html
-- cp -rl dependencies/jekyll/search.html ./copy-based/search.html
-- sed -i 's/permalink\:\s*\/search\.html/permalink\:\ copy-based\/search\.html/g' ./copy-based/search.html
-- cp -rl dependencies/jekyll/search.html ./copy-free/search.html
-- sed -i 's/permalink\:\s*\/search\.html/permalink\:\ copy-free\/search\.html/g' ./copy-free/search.html
-- cp -rl dependencies/jekyll/search.html ./install-admin/search.html
-- sed -i 's/permalink\:\s*\/search\.html/permalink\:\ install-admin\/search\.html/g' ./install-admin/search.html
-- cp -rl dependencies/jekyll/search.html ./inventory-collect/search.html
-- sed -i 's/permalink\:\s*\/search\.html/permalink\:\ inventory-collect\/search\.html/g' ./inventory-collect/search.html
-- cp -rl dependencies/jekyll/search.html ./san-host/search.html
-- sed -i 's/permalink\:\s*\/search\.html/permalink\:\ san-host\/search\.html/g' ./san-host/search.html
-- cp -rl dependencies/jekyll/search.html ./snapmirror/search.html
-- sed -i 's/permalink\:\s*\/search\.html/permalink\:\ snapmirror\/search\.html/g' ./snapmirror/search.html
-- mv dependencies/jekyll/prod-build.sh ./ && ./prod-build.sh
-- sudo apt-get -y install graphicsmagick graphicsmagick-libmagick-dev-compat libmagickwand-dev
-script:
-- if [[ ! -z "$FEATURE_FLAG" ]]; then bundle exec rake buildAll; fi
-- mkdir -p /tmp/output && bundle exec jekyll build --trace --destination /tmp/output --config _config.yml,project.yml
-- touch /tmp/output/.nojekyll
-deploy:
-  provider: pages
-  skip_cleanup: true
-  github_token: $GH_TOKEN
-  keep_history: false
-  local_dir: /tmp/output
-  target_branch: $DEPLOY_BRANCH
-  verbose: true
-  on:
-    all_branches: true
+jobs:
+  include:
+    - stage: deploy
+      if: branch = main OR repo =~ /-internal/
+      before_install:
+      - echo -e "machine github.com\n login $GH_TOKEN" > ~/.netrc && chmod 600 ~/.netrc
+      - git submodule add -b $FRAMEWORK_BRANCH https://github.com/NetAppDocs/jekyll dependencies/jekyll
+      - gem update --system && gem install bundler && gem update bundler
+      - if [[ -z "$DEPLOY_BRANCH" ]]; then export DEPLOY_BRANCH=gh-pages; fi
+      - mv dependencies/jekyll/prod-build.sh ./ && ./prod-build.sh
+      - sudo apt-get -y install graphicsmagick graphicsmagick-libmagick-dev-compat libmagickwand-dev
+      script:
+      - if [[ ! -z "$FEATURE_FLAG" ]]; then bundle exec rake buildAll; fi
+      - mkdir -p /tmp/output && bundle exec jekyll build --trace --destination /tmp/output
+      - touch /tmp/output/.nojekyll
+      deploy:
+        provider: pages
+        skip_cleanup: true
+        github_token: $GH_TOKEN
+        keep_history: false
+        local_dir: /tmp/output
+        target_branch: $DEPLOY_BRANCH
+        verbose: true
+        on:
+          all_branches: true
+    - state: i18n
+      if: branch = main OR repo =~ /-internal/
+      before_install:
+      - echo -e "machine github.com\n login $GH_TOKEN" >> ~/.netrc && chmod 600 ~/.netrc
+      - git submodule add https://github.com/NetAppDocs/jekyll-harmony dependencies/jekyll-harmony
+      - gem update --system && gem install bundler && gem update bundler
+      install:
+      - cd dependencies/jekyll-harmony
+      - bundle install --jobs=3 --retry=3
+      - bundle exec rake install
+      - cd -
+      script:
+      - if [[ ! -z "$HARMONY_FLAG" ]]; then i18n-translate; fi
