--- a/project.yml
+++ b/project.yml
@@ -12,7 +12,7 @@ sidebar:
     - section: snapmirror
     - section: san-host
     - title: Legal notices
-      url: /legal-notices.html
+      url: /reference_legal_notices.html
 
 homepage:
   tiles:
