Add project.yml to config parameter

--- a/.travis.yml
+++ b/.travis.yml
@@ -18,7 +18,7 @@ jobs:
       - sudo apt-get -y install graphicsmagick graphicsmagick-libmagick-dev-compat libmagickwand-dev
       script:
       - if [[ ! -z "$FEATURE_FLAG" ]]; then bundle exec rake buildAll; fi
-      - mkdir -p /tmp/output && bundle exec jekyll build --trace --destination /tmp/output
+      - mkdir -p /tmp/output && bundle exec jekyll build --trace --destination /tmp/output --config _config.yml,project.yml
       - touch /tmp/output/.nojekyll
       deploy:
         provider: pages
