--- a/project.yml
+++ b/project.yml
@@ -21,7 +21,7 @@ sidebar:
     - section: snapmirror
     - section: san-host
     - title: Legal notices
-      url: /reference_legal_notices.html
+      url: /legal-notices.html
       
 product-family: 
   name: ONTAP
